WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
278081
::target-text cannot be applied on visited links
https://bugs.webkit.org/show_bug.cgi?id=278081
Summary
::target-text cannot be applied on visited links
Aditya Keerthi
Reported
2024-08-13 21:44:44 PDT
a:visited::target-text { color: lime; background: green; } is not working. css/css-pseudo/target-text-008.html is failing because of this.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-08-13 21:44:57 PDT
<
rdar://problem/133814103
>
Aditya Keerthi
Comment 2
2024-08-13 21:51:13 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/32171
EWS
Comment 3
2024-08-14 10:04:51 PDT
Committed
282240@main
(93f73ae14269): <
https://commits.webkit.org/282240@main
> Reviewed commits have been landed. Closing PR #32171 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug