::target-text cannot be applied on visited links https://bugs.webkit.org/show_bug.cgi?id=278081 rdar://133814103

Reviewed by Tim Nguyen and Richard Robinson.

* LayoutTests/TestExpectations:

The fact that these styles are not web-exposed is covered by the already
passing WPT `css/css-pseudo/highlight-pseudos-visited-computed-001.html`.

* Source/WebCore/rendering/StyledMarkedText.cpp:
(WebCore::computeStyleForPseudoElementStyle):

Use `visitedDependentColorWithColorFilter` to account for visited styles.

Canonical link: https://commits.webkit.org/282240@main